--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          <div class="imageL">
             <img src="./img/space-x-logo-500x281.ico" alt="">   
          </div>
-          <h2>WELCOME TO THIS AMAZING WEBSITE</h2>
+          <h2>WELCOME TO THIS AMAZING WEBSITE!!</h2>
       </div>
 
       
@@ -26,7 +26,7 @@
               <p>
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt illum earum aliquid tenetur itaque suscipit, officia quis. A veniam, quae autem reprehenderit odio enim ipsam eum, eos necessitatibus dicta consequatur! Iste quo vero rem magni provident ipsa consectetur corrupti voluptatibus fugiat beatae voluptas nobis blanditiis earum modi, inventore tenetur quia suscipit alias perferendis tempora. Minima quisquam asperiores numquam nemo, ullam iure maxime. Veritatis sint, nisi mollitia ducimus blanditiis necessitatibus vero aliquam impedit esse magnam hic alias harum accusamus ipsum amet! Nemo sequi ratione aut quod consectetur beatae totam unde commodi natus laudantium, ullam veniam itaque adipisci quaerat magni iste iure iusto officia. Blanditiis, maiores error. Velit, repellat ducimus! Itaque sint corrupti voluptas animi unde autem ad fuga omnis consectetur, sit, sed cupiditate dolore qui dolorum earum optio pariatur velit! Doloribus molestias sint asperiores dolores, nihil officiis deserunt nulla ad! Hic ducimus doloribus magnam facilis cum vero optio dolore aspernatur laborum laudantium eius expedita non sed ad excepturi itaque nulla dolores molestiae ipsam, quod maxime reprehenderit, quae sit? Quia, veritatis non incidunt reprehenderit doloribus pariatur animi voluptate saepe ea eius mollitia!
               </p>
-              <a href="#">See more ...</a> 
+              <a href="#">Read more ...</a> 
           </article>
 
           <article id="article">
@@ -36,7 +36,7 @@
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt illum earum aliquid tenetur itaque suscipit, officia quis. A veniam, quae autem reprehenderit odio enim ipsam eum, eos necessitatibus dicta consequatur! Iste quo vero rem magni provident ipsa consectetur corrupti voluptatibus fugiat beatae voluptas nobis blanditiis earum modi, inventore tenetur quia suscipit alias perferendis tempora. Minima quisquam asperiores numquam nemo, ullam iure maxime. Veritatis sint, nisi mollitia ducimus blanditiis necessitatibus vero aliquam impedit esse magnam hic alias harum accusamus ipsum amet! Nemo sequi ratione aut quod consectetur beatae totam unde commodi natus laudantium, ullam veniam itaque adipisci quaerat magni iste iure iusto officia. Blanditiis, maiores error. Velit, repellat ducimus! Itaque sint corrupti voluptas animi unde autem ad fuga omnis consectetur, sit, sed cupiditate dolore qui dolorum earum optio pariatur velit! Doloribus molestias sint asperiores dolores, nihil officiis deserunt nulla ad! Hic ducimus doloribus magnam facilis cum vero optio dolore aspernatur laborum laudantium eius expedita non sed ad excepturi itaque nulla dolores molestiae ipsam, quod maxime reprehenderit, quae sit? Quia, veritatis non incidunt reprehenderit doloribus pariatur animi voluptate saepe ea eius mollitia!
             </p>
-            <a href="#">See more ...</a> 
+            <a href="#">Read more ...</a> 
           </article>
 
           <article id="article">
@@ -46,7 +46,7 @@
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt illum earum aliquid tenetur itaque suscipit, officia quis. A veniam, quae autem reprehenderit odio enim ipsam eum, eos necessitatibus dicta consequatur! Iste quo vero rem magni provident ipsa consectetur corrupti voluptatibus fugiat beatae voluptas nobis blanditiis earum modi, inventore tenetur quia suscipit alias perferendis tempora. Minima quisquam asperiores numquam nemo, ullam iure maxime. Veritatis sint, nisi mollitia ducimus blanditiis necessitatibus vero aliquam impedit esse magnam hic alias harum accusamus ipsum amet! Nemo sequi ratione aut quod consectetur beatae totam unde commodi natus laudantium, ullam veniam itaque adipisci quaerat magni iste iure iusto officia. Blanditiis, maiores error. Velit, repellat ducimus! Itaque sint corrupti voluptas animi unde autem ad fuga omnis consectetur, sit, sed cupiditate dolore qui dolorum earum optio pariatur velit! Doloribus molestias sint asperiores dolores, nihil officiis deserunt nulla ad! Hic ducimus doloribus magnam facilis cum vero optio dolore aspernatur laborum laudantium eius expedita non sed ad excepturi itaque nulla dolores molestiae ipsam, quod maxime reprehenderit, quae sit? Quia, veritatis non incidunt reprehenderit doloribus pariatur animi voluptate saepe ea eius mollitia!
             </p>
-            <a href="#">See more ...</a> 
+            <a href="#">Read more ...</a> 
           </article>
           
       </section>
