Se agrega barra de tareas con su respectivo estilo.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
           <h2>WELCOME TO THIS AMAZING WEBSITE!!</h2>
       </div>
 
-      
+      <div id="barra">
+         <ul class="nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Login</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+         </ul> 
+      </div> 
       
       <section id="contenido">
           <article id="article">
