--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <article id="article">
               <h2>Title of the article</h2>
               <h3>Lorem ipsum dolor sit amet consecteur, adipisicing elit. Aspernatur explicabo quos recusandae quaerat sapiente, autem voluptas numquam nihil qui! Expedita pariatur quod fugiat quam harum minima nam dolor veniam numquam?</h3>
-              <div><img src="./img/astronaut.jpg" alt=""></div>
+              <div><img src="https://i.postimg.cc/x1JbGfT8/astronaut.jpg" alt=""></div>
               <p>
                   Lorem ipsum dolor sit amet consecteur, adipisicing elit. Incidunt illum earum aliquid tenetur itaque suscipit, officia quis. A veniam, quae autem reprehenderit odio enim ipsam eum, eos necessitatibus dicta consequatur! Iste quo vero rem magni provident ipsa consectetur corrupti voluptatibus fugiat beatae voluptas nobis blanditiis earum modi, inventore tenetur quia suscipit alias perferendis tempora. Minima quisquam asperiores numquam nemo, ullam iure maxime. Veritatis sint, nisi mollitia ducimus blanditiis necessitatibus vero aliquam impedit esse magnam hic alias harum accusamus ipsum amet! Nemo sequi ratione aut quod consectetur beatae totam unde commodi natus laudantium, ullam veniam itaque adipisci quaerat magni iste iure iusto officia. Blanditiis, maiores error. Velit, repellat ducimus! Itaque sint corrupti voluptas animi unde autem ad fuga omnis consectetur, sit, sed cupiditate dolore qui dolorum earum optio pariatur velit! Doloribus molestias sint asperiores dolores, nihil officiis deserunt nulla ad! Hic ducimus doloribus magnam facilis cum vero optio dolore aspernatur laborum laudantium eius expedita non sed ad excepturi itaque nulla dolores molestiae ipsam, quod maxime reprehenderit, quae sit? Quia, veritatis non incidunt reprehenderit doloribus pariatur animi voluptate saepe ea eius mollitia!
               </p>
@@ -39,7 +39,7 @@
           <article id="article">
             <h2>Title of the article</h2>
             <h3>Lorem ipsum dolor sit amet consecteur, adipisicing elit. Aspernatur explicabo quos recusandae quaerat sapiente, autem voluptas numquam nihil qui! Expedita pariatur quod fugiat quam harum minima nam dolor veniam numquam?</h3>
-            <div><img src="./img/astronauts2.png" alt=""></div>
+            <div><img src="https://i.postimg.cc/mgv18vtw/astronauts2.png" alt=""></div>
             <p>
                 Lorem ipsum dolor sit amet consecteur, adipisicing elit. Incidunt illum earum aliquid tenetur itaque suscipit, officia quis. A veniam, quae autem reprehenderit odio enim ipsam eum, eos necessitatibus dicta consequatur! Iste quo vero rem magni provident ipsa consectetur corrupti voluptatibus fugiat beatae voluptas nobis blanditiis earum modi, inventore tenetur quia suscipit alias perferendis tempora. Minima quisquam asperiores numquam nemo, ullam iure maxime. Veritatis sint, nisi mollitia ducimus blanditiis necessitatibus vero aliquam impedit esse magnam hic alias harum accusamus ipsum amet! Nemo sequi ratione aut quod consectetur beatae totam unde commodi natus laudantium, ullam veniam itaque adipisci quaerat magni iste iure iusto officia. Blanditiis, maiores error. Velit, repellat ducimus! Itaque sint corrupti voluptas animi unde autem ad fuga omnis consectetur, sit, sed cupiditate dolore qui dolorum earum optio pariatur velit! Doloribus molestias sint asperiores dolores, nihil officiis deserunt nulla ad! Hic ducimus doloribus magnam facilis cum vero optio dolore aspernatur laborum laudantium eius expedita non sed ad excepturi itaque nulla dolores molestiae ipsam, quod maxime reprehenderit, quae sit? Quia, veritatis non incidunt reprehenderit doloribus pariatur animi voluptate saepe ea eius mollitia!
             </p>
@@ -49,7 +49,7 @@
           <article id="article">
             <h2>Title of the article</h2>
             <h3>Lorem ipsum dolor sit amet consecteur, adipisicing elit. Aspernatur explicabo quos recusandae quaerat sapiente, autem voluptas numquam nihil qui! Expedita pariatur quod fugiat quam harum minima nam dolor veniam numquam?</h3>
-            <div><img src="./img/astronauts3.jpg" alt=""></div>
+            <div><img src="https://i.postimg.cc/WbfkJFVx/astronauts3.jpg" alt=""></div>
             <p>
                 Lorem ipsum dolor sit amet consecteur, adipisicing elit. Incidunt illum earum aliquid tenetur itaque suscipit, officia quis. A veniam, quae autem reprehenderit odio enim ipsam eum, eos necessitatibus dicta consequatur! Iste quo vero rem magni provident ipsa consectetur corrupti voluptatibus fugiat beatae voluptas nobis blanditiis earum modi, inventore tenetur quia suscipit alias perferendis tempora. Minima quisquam asperiores numquam nemo, ullam iure maxime. Veritatis sint, nisi mollitia ducimus blanditiis necessitatibus vero aliquam impedit esse magnam hic alias harum accusamus ipsum amet! Nemo sequi ratione aut quod consectetur beatae totam unde commodi natus laudantium, ullam veniam itaque adipisci quaerat magni iste iure iusto officia. Blanditiis, maiores error. Velit, repellat ducimus! Itaque sint corrupti voluptas animi unde autem ad fuga omnis consectetur, sit, sed cupiditate dolore qui dolorum earum optio pariatur velit! Doloribus molestias sint asperiores dolores, nihil officiis deserunt nulla ad! Hic ducimus doloribus magnam facilis cum vero optio dolore aspernatur laborum laudantium eius expedita non sed ad excepturi itaque nulla dolores molestiae ipsam, quod maxime reprehenderit, quae sit? Quia, veritatis non incidunt reprehenderit doloribus pariatur animi voluptate saepe ea eius mollitia!
             </p>
@@ -60,7 +60,7 @@
 
       <div class="clear"></div>
     
-      <footer>Updated: 23/11/2024 | Created © 2024 | Indatech</footer>
+      <footer>Updated: 28/11/2024 | Created © 2024 | Indatech</footer>
    </div>
 
 </body>
